# riemannian-biometric-geometry

./: .gitignore  README.md  pyproject.toml
configs/: geometry.yaml
results/cluster_topology/: cluster_topology_mavceleb.json  cluster_topology_voxceleb1.json
results/cross_modal/: cross_modal_mavceleb.json  cross_modal_voxceleb1.json  eer_mavceleb.json  eer_voxceleb1.json
results/curvature/: curvature_mavceleb.json  curvature_voxceleb1.json
results/intrinsic_dim/: intrinsic_dim_mavceleb.json  intrinsic_dim_voxceleb1.json
results/tables/: correlation_analysis.json  table_correlations.tex  table_cross_modal.tex  table_encoder_geometry.tex
scripts/: 01_extract_embeddings.py  02_intrinsic_dimension.py  03_curvature.py  04_cluster_topology.py  05_cross_modal_geometry.py  06_cross_modal_eer.py  07_correlation_analysis.py  08_generate_figures.py
src/encoders/: __init__.py  face_encoders.py  registry.py  voice_encoders.py
src/evaluation/: eer.py
src/geometry/: cluster_topology.py  cross_modal.py  curvature.py  intrinsic_dim.py
tests/: test_cluster_topology.py  test_cross_modal.py  test_curvature.py  test_eer.py  test_encoders.py  test_intrinsic_dim.py  test_pipeline_logic.py
